--- a/public/css/startCss.css
+++ b/public/css/startCss.css
@@ -1,14 +1,38 @@
 
 body {
-    /*background-color: #ea72e5;*/
 
-    background-image: url('https://github.com/PaulinaStan/darbas_su_laravel/blob/main/laravel_failai/Collage%202023-03-06%2020_35_13.jpg?raw=true');
-}
 
-body {
+    background-color: pink; /* pradinė spalva */
+
+
     padding-top: 70px;
 }
 
+.main {
+    background-image: url('https://github.com/PaulinaStan/darbas_su_laravel/blob/main/laravel_failai/Collage%202023-03-06%2020_35_13.jpg?raw=true');
+}
+
+.kategorija
+{
+        background-color: #ffccd5;
+}
+
+.krepselis {
+    background-color: #adb9f3;
+}
+
+.uzsakymas
+{
+    background-color: #adb9f3;
+}
+.uzsakyti
+{
+    background-color: #ffccd5;
+}
+.kategorijos
+{
+    background-color: #ffccd5;
+}
 .starter-template {
     padding: 40px 15px;
     text-align: center;
@@ -24,18 +48,25 @@ div.thumbnail img {
     max-height: 200px;
 }
 
-.table {
-    background-color: #ea72e5;
-    text-align: left;
-    padding: 10px;
+
+/* Animacijos stiliai */
+@keyframes color-change {
+    0% {
+        background-color: pink; /* pradinė spalva */
+    }
+    50% {
+        background-color: purple; /* tarpinė spalva */
+    }
+    100% {
+        background-color: blue; /* galutinė spalva */
+    }
 }
 
-.btn {
-    background-color: #073ad9;
-    color: #ea72e5;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
+
+/* Pradinė kategorijų puslapio spalva */
+.category-page {
+    background-color: pink;
+    animation: color-change 5s infinite; /* animacija, trukmė - 5 sekundės, kartojimas - begalybė */
 }
 
 div.form-inline form {
