sumazintas nuotrauku dydis kataloguose: public->images->aksesurai,  berniuku rubai, mergaiciu rubai

--- a/public/css/startCss.css
+++ b/public/css/startCss.css
@@ -37,7 +37,10 @@ body {
 {
     background-color:#ffccd5;
 }
-
+.uzsakymai
+{
+    background-color: #adb9f3;
+}
 
 .starter-template {
     padding: 40px 15px;
