--- a/public/css/startCss.css
+++ b/public/css/startCss.css
@@ -1,9 +1,6 @@
 
+
 body {
-
-    background-color: pink; /* pradinė spalva */
-
-
     padding-top: 70px;
 }
 
@@ -41,6 +38,15 @@ body {
 {
     background-color: #adb9f3;
 }
+.categoriesfoto
+{
+   padding-top: 12px;
+    width: 200px;
+    height: 150px;
+    display: block;
+    margin: 0 auto;
+}
+
 
 .starter-template {
     padding: 40px 15px;
@@ -58,18 +64,18 @@ div.thumbnail img {
 }
 
 
-/* Animacijos stiliai */
-@keyframes color-change {
-    0% {
-        background-color: pink; /* pradinė spalva */
-    }
-    50% {
-        background-color: purple; /* tarpinė spalva */
-    }
-    100% {
-        background-color: blue; /* galutinė spalva */
-    }
-}
+/*!* Animacijos stiliai *!*/
+/*@keyframes color-change {*/
+/*    0% {*/
+/*        background-color: pink; !* pradinė spalva *!*/
+/*    }*/
+/*    50% {*/
+/*        background-color: purple; !* tarpinė spalva *!*/
+/*    }*/
+/*    100% {*/
+/*        background-color: blue; !* galutinė spalva *!*/
+/*    }*/
+/*}*/
 
 .btn {
     background-color: #b7c8fc;
