--- a/public/css/adminCss.css
+++ b/public/css/adminCss.css
@@ -20,3 +20,6 @@ span.badge.badge-danger {
     color: #212529;
     background-color: #ffc107;
 }
+div.input-group select.form-control {
+    height: 32px !important;
+}
