--- a/public/css/startCss.css
+++ b/public/css/startCss.css
@@ -1,12 +1,12 @@
 
 
 body {
-    padding-top: 70px;
+    padding-top: 40px;
 }
 
-.main {
-    background-image: url('/images/Collage 2023-03-08 20_47_27-compressed.jpg');
-    /*background-image: url('https://github.com/PaulinaStan/darbas_su_laravel/blob/main/laravel_failai/Collage%202023-03-06%2020_35_13.jpg?raw=true');*/
+.main
+{
+    background-color:  #ffccd5;
 }
 
 .kategorija
@@ -49,7 +49,7 @@ body {
 
 
 .starter-template {
-    padding: 40px 15px;
+    padding: 20px 15px;
     text-align: center;
 }
 
@@ -89,3 +89,29 @@ div.form-inline form {
     display: inline;
 }
 
+div.labels {
+    position: absolute;
+}
+
+div.labels span.badge {
+    display: block;
+}
+
+span.badge.badge-success {
+    color: #fff;
+    background-color: #28a745;
+}
+
+span.badge.badge-warning {
+    color: #fff;
+    background-color: #dc3545;
+}
+
+span.badge.badge-danger {
+    color: #212529;
+    background-color: #ffc107;
+}
+
+div.filters {
+    padding-bottom: 5px;
+}
